Moved setup items to a separate solution

--- a/source/Setup/VSIX/Blade.VSIX.csproj
+++ b/source/Setup/VSIX/Blade.VSIX.csproj
@@ -27,7 +27,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CopyVsixExtensionFiles>True</CopyVsixExtensionFiles>
-    <CopyVsixExtensionLocation>..\..\Bin\VSIX</CopyVsixExtensionLocation>
+    <CopyVsixExtensionLocation>..\VSIXOutput</CopyVsixExtensionLocation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
