--- a/source/Core/Runtime/mscorlib/Blade.Runtime.mscorlib.csproj
+++ b/source/Core/Runtime/mscorlib/Blade.Runtime.mscorlib.csproj
@@ -98,6 +98,7 @@
     <Compile Include="System\Collections\Generic\IEnumerable.cs" />
     <Compile Include="System\Collections\Generic\IEnumerator.cs" />
     <Compile Include="System\Contracts\IRegularExpression.cs" />
+    <Compile Include="System\ArrayEnumerator.cs" />
     <Compile Include="System\Extensions\ScriptMixinAttribute.cs" />
     <Compile Include="System\Extensions\ScriptFieldAttribute.cs" />
     <Compile Include="System\Extensions\ScriptNamespaceAttribute.cs" />
