Added XMLHttpRequest object to core lib.

--- a/source/Core/Runtime/SystemCore/Blade.Runtime.SystemCore.csproj
+++ b/source/Core/Runtime/SystemCore/Blade.Runtime.SystemCore.csproj
@@ -95,6 +95,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Browser\ReadyState.cs" />
+    <Compile Include="Browser\XMLHttpRequest.cs" />
     <Compile Include="Browser\Window.cs" />
     <Compile Include="Browser\History.cs">
       <SubType>Code</SubType>
