--- a/source/Core/Runtime/mscorlib/Blade.Runtime.mscorlib.csproj
+++ b/source/Core/Runtime/mscorlib/Blade.Runtime.mscorlib.csproj
@@ -95,6 +95,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="System\Collections\Generic\Dictionary.cs" />
     <Compile Include="System\Collections\Generic\IEnumerable.cs" />
     <Compile Include="System\Collections\Generic\IEnumerator.cs" />
     <Compile Include="System\Contracts\IRegularExpression.cs" />
