Updates to fix some issues in Unit Test Projects

--- a/source/Setup/UnitTestsTemplate/Blade.UnitTestTemplate.csproj
+++ b/source/Setup/UnitTestsTemplate/Blade.UnitTestTemplate.csproj
@@ -63,10 +63,11 @@
       <SubType>Designer</SubType>
     </VSTemplate>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Web\Bin\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Icon.ico" />
-    <Content Include="Web\Bin\Blade.Tools.Quality.Core.dll" />
     <Content Include="Web\index.htm" />
     <Content Include="Web\scripts\test.js" />
   </ItemGroup>
