--- a/source/Core/Compiler/Blade.Compiler.csproj
+++ b/source/Core/Compiler/Blade.Compiler.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Translation\Common\BlockTranslator.cs" />
     <Compile Include="Translation\Common\ParameterTranslator.cs" />
     <Compile Include="Translation\Common\VariableDeclaratorTranslator.cs" />
+    <Compile Include="Translation\TranslationHelper.cs" />
     <Compile Include="Translation\PositionalWriter.cs" />
     <Compile Include="Translation\Declaration\ClassTranslator.cs" />
     <Compile Include="Translation\Declaration\EnumTranslator.cs" />
