Added support for Storage and JSON

--- a/source/Core/Runtime/SystemCore/Blade.Runtime.SystemCore.csproj
+++ b/source/Core/Runtime/SystemCore/Blade.Runtime.SystemCore.csproj
@@ -95,7 +95,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Browser\JSON.cs" />
     <Compile Include="Browser\ReadyState.cs" />
+    <Compile Include="Browser\Storage.cs" />
     <Compile Include="Browser\XMLHttpRequest.cs" />
     <Compile Include="Browser\Window.cs" />
     <Compile Include="Browser\History.cs">
