.NET 4.5 and Visual Studio 2012 support

--- a/source/Core/Runtime/mscorlib/Blade.Runtime.mscorlib.csproj
+++ b/source/Core/Runtime/mscorlib/Blade.Runtime.mscorlib.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>System</RootNamespace>
     <AssemblyName>mscorlib</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -317,4 +317,9 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="BeforeBuild">
+    <ItemGroup>
+      <Reference Remove="@Reference" />
+    </ItemGroup>
+  </Target>
 </Project>
